# ros2_hull

./: README.md  frames_2026-06-16_16.29.13.gv
install/: local_setup.sh  setup.sh
log/: latest_build
maps/: bing_tiles
scripts/udev/: 99-hull-hardware.rules  99-wheeltec-gps.rules  install-hull-hardware-udev.sh  install-wheeltec-gps-udev.sh
src/hull_navigation/: package.xml  setup.cfg  setup.py
src/hull_navigation/config/: ekf.yaml  hardware_ports.yaml  nav2_params.yaml  navigation.yaml
src/hull_navigation/hull_navigation/: cmd_vel_stub_node.py  geo_utils.py  gps_goal_bridge_node.py  gps_imu_fusion_node.py  gps_navigator_node.py  gps_velocity_adapter_node.py  send_nav_goal.py
src/hull_navigation/launch/: localization.launch.py  nav2_open_water.launch.py  navigation.launch.py
src/hull_navigation/scripts/: send_goal.sh
src/hull_navigation/test/: test_gps_imu_fusion.py  test_gps_navigator.py  test_velocity_adapter.py
src/hull_serial/: setup.cfg  setup.py
src/hull_serial/config/: serial_imu.yaml  serial_imu_nav.yaml
src/hull_serial/hull_serial/: serial_imu_node.py
src/hull_serial/test/: test_gx_frame_parser.py  test_imu_frame_adapter.py  test_imu_odometry_integrator.py
src/nmea_navsat_driver/launch/: nmea_serial_driver.launch.py
src/wheeltec_gps_path/: CMakeLists.txt  package.xml
src/wheeltec_gps_path/config/: mapviz_local.mvc
src/wheeltec_gps_path/launch/: gps_path.launch.py  mapviz_path.launch.py
src/wheeltec_gps_path/scripts/: bing_tile_server.py
src/wheeltec_gps_path/src/: gps_path.cpp
必应卫星地图_260512144924/: demo.py  demo_2.py
(+170 files in other folders)
